Main title, overflow fix on bio.

--- a/public/style.css
+++ b/public/style.css
@@ -87,16 +87,46 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#009564",endCo
   color: #5EB086;
   text-transform: uppercase;
   font-size: 22px;
+  z-index: -1;
 }
 
 .generalTitle {
   position: absolute;
   position: absolute;
-  top: 60px;
+  top: 18px;
   left: 50%;
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
-  color: #5EB086;
+  background: #0d1a22;
+  color: #6A96A2;
+  font-size: 14px;
+  padding: 6px 32px;
   text-transform: uppercase;
-  font-size: 22px;
+  z-index: -1;
+}
+
+.generalTitle::before {
+  position: absolute;
+  content: " ";
+  display: block;
+  top: 0;
+  left: -14px;
+  height: 100%;
+  width: 40px;
+  transform: skewX(12deg);
+  background-color: #0d1a22;
+  z-index: 0;
+}
+
+.generalTitle::after {
+  position: absolute;
+  content: " ";
+  display: block;
+  top: 0;
+  right: -14px;
+  height: 100%;
+  width: 40px;
+  transform: skewX(-12deg);
+  background-color: #0d1a22;
+  z-index: 0;
 }
